# noeme

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.io.md
.github/workflows/: explainer.yml  neome.yml  test_network.yml
core/: Cargo.toml  README.md
core/examples/: test.json
core/src/: main.rs
examples/: exactly.json  test.json
explainer-cli/: Cargo.toml
explainer-cli/src/: main.rs
explainer-core/: Cargo.toml  README.md
explainer-core/src/: explainer.rs
explainer-core/tests/: explainer_test.rs
explainer-wasm/: Cargo.toml
explainer-wasm/browser-extension/: .gitignore  manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
explainer-wasm/browser-extension/pkg/: explainer_wasm.d.ts  explainer_wasm.js  explainer_wasm_bg.wasm  explainer_wasm_bg.wasm.d.ts  package.json
explainer-wasm/browser-extension/src/background/: worker.ts
explainer-wasm/browser-extension/src/components/: HelloWorld.tsx
explainer-wasm/browser-extension/src/content/: main.tsx
explainer-wasm/browser-extension/src/content/views/: App.tsx
explainer-wasm/browser-extension/src/offscreen/: offscreen.js  offscreen.ts
explainer-wasm/browser-extension/src/popup/: App.tsx  main.tsx
explainer-wasm/browser-extension/types/: explainer.d.ts
explainer-wasm/pkg/: .gitignore  README.md  package.json
explainer-wasm/src/: lib.rs
explainer-wasm/web/: README.md  components.json  manifest.config.ts  package.json  pnpm-lock.yaml
explainer-wasm/web/src/: index.css
explainer-wasm/web/src/background/: worker.ts
explainer-wasm/web/src/components/: explainer.tsx
explainer-wasm/web/src/content/views/: App.tsx
explainer-wasm/web/src/lib/: offscreen.ts
explainer-wasm/web/wasm/: package.json
noeme-cli/: Cargo.toml
noeme-cli/src/: cli.rs  main.rs
noeme-core/: Cargo.toml  README.md
noeme-core/src/: lib.rs  noeme.rs
noeme-core/tests/: noeme_test.rs
noeme-desktop/: package.json  pnpm-lock.yaml
noeme-desktop/src/: App.tsx
noeme-desktop/src-tauri/: Cargo.toml  tauri.conf.json
noeme-desktop/src-tauri/capabilities/: default.json
noeme-desktop/src-tauri/src/: lib.rs  main.rs
noeme-wasm/: Cargo.toml  build.zsh
noeme-wasm/src/: lib.rs
noeme-wasm/web/: manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
noeme-wasm/web/src/: index.css
noeme-wasm/web/src/background/: worker.ts
noeme-wasm/web/src/components/: noeme.tsx
noeme-wasm/web/src/content/: main.tsx
noeme-wasm/web/src/lib/: scrollbar.ts
noeme-wasm/web/src/offscreen/: offscreen.html  offscreen.ts
noeme-wasm/web/wasm/: noeme.d.ts  package.json
samples/: exactly.json
src/: dictionary.rs  explainer.rs  lib.rs  main.rs
tests/: dictionary_test.rs  explainer_test.rs
(+2 files in other folders)
