[package]
name = "explainer"
version = "0.1.1"
edition = "2021"

description = "Explain a given word, including its pronunciation, meanings, and sample sentences."
keywords = ["explainer" ,"translator", "dictionary"]

authors = ["zennolux <zennolux@gmail.com>"]
license = "MIT"

repository = "https://github.com/zennolux/explainer"
readme = "crates.io.md"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
reqwest = "0.12.22"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.0", features = ["full"] }
voca_rs = "1.15.2"
